<resources>
    <string name="app_name">Android</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="activity_with_menu">Menu Bar</string>
    <string name="activity_with_tabs">Tab Layout</string>
    <string name="activity_rest_volley">Volley</string>
    <string name="activity_rest_volley_bnav">Volley Bottom Nav</string>
    <string name="activity_rest_retrofit">Retrofit</string>
    <string name="activity_with_oauth">Oauth</string>
    <string name="activity_people">People SQLite - RecyclerView</string>
    <string name="activity_with_reveal">Reveal Effects</string>
    <string name="list">Lista</string>
    <string name="detail">Detalles</string>
    <string name="setting">Ajustes</string>
    <string name="search">Buscar</string>
    <string name="key_word">Palabra Clave</string>
    <string name="undo">Deshacer</string>
    <string name="run">Ejecutar</string>
    <string name="help">Ayuda</string>
    <string name="grid_view">Grilla</string>
    <string name="list_view">Lista</string>
    <string name="languages">Idiomas</string>
    <string name="languages_hint">Para cambiar el idioma es necesario reiniciar la Aplicacion.</string>
    <string name="language_spanish">Español</string>
    <string name="language_english">Ingles</string>
    <string name="language_portuguese">Portugués</string>
    <string name="yes">Si</string>
    <string name="created">Creada</string>
    <string name="created_error">Error creando</string>
    <string name="save">Guardar</string>
    <string name="create">Crear</string>
    <string name="update">Actualizar</string>
    <string name="updated">Actualizado</string>
    <string name="activate">Activar</string>
    <string name="deactivate">Desactivar</string>
    <string name="creating">Creando…</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="continues">Continuar</string>
    <string name="done">Hecho</string>
    <string-array name="tab_items">
        <item>RAM</item>
        <item>SQLite</item>
    </string-array>
    <string name="id">ID</string>
    <string name="title">Titulo</string>
    <string name="description">Descripción</string>
    <string name="type">Tipo</string>
    <string name="text_formatted">Tarjeta %1$d de %2$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text_scroll">
        Standard App bar scrolling with only Toolbar\n\n\n

    scroll off-screen with the content and returns when the user reverse scrolls.
    stay fixed at the top with content scrolling under it.\n\n\n\n

        To achieve this, apart from the above basic setup code implementation:\n\n

The Toolbar needs to have app:layout_scrollFlags\n\n

            scroll -will be scrolled along with the content.\n\n

        enterAlways -when content is pulled down, immediately app bar will appear.\n\n

        snap -when the AppBar is half scrolled and content scrolling stopped, this will allow the AppBar to settle either hidden or appear based on the scrolled size of Toolbar.\n\n

        Once app:layout_scrollFlags added to Toolbar, the content view (Either a NestedScrollView or RecyclerView) needs to have app:layout_behavior tag.\n\n
    </string>
</resources>