<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cv_data"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_padding_size_medium"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <!-- Cuerpo -->

        <TextView
            android:id="@+id/tv_dummy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />


        <TextView
            android:id="@+id/tv_dummy_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_padding_size_medium"
            android:text="@string/id"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />


        <TextView
            android:id="@+id/tv_dummy_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_padding_size_medium"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />



        <!-- Acciones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_size_small">

            <Button
                android:id="@+id/btn_activate"
                style="@style/ActivateRoundButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:layout_weight="0.6"
                android:text="@string/activate"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/btn_run"
                style="@style/SecondaryRoundButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:layout_weight="0.3"
                android:src="@drawable/ic_action_play" />


            <ImageButton
                android:id="@+id/btn_edit"
                style="@style/EditRoundButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:layout_weight="0.3"
                android:src="@drawable/ic_action_edit" />


            <ImageButton
                android:id="@+id/btn_deactivate"
                style="@style/TrashRoundButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:layout_weight="0.3"
                android:src="@drawable/ic_action_discard" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>