<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/cv_data"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_padding_size_medium"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Cuerpo -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_padding_size_small"
            android:paddingLeft="@dimen/margin_padding_size_small"
            android:paddingRight="@dimen/margin_padding_size_small"
            android:paddingTop="@dimen/margin_padding_size_medium">


            <!--Right Content-->
            <RelativeLayout
                android:id="@+id/rl_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="@dimen/margin_padding_size_small">

                <TextView
                    android:id="@+id/tv_privia_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:layout_centerHorizontal="true"/>

                <ProgressBar
                    android:id="@+id/progress_run_win"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tv_privia_level"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminate="false"
                    android:progress="100"
                    android:max="100"
                    android:secondaryProgress="100"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:layout_centerHorizontal="true"/>

                <ImageButton
                    android:id="@+id/btn_bluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_padding_size_small"
                    android:src="@drawable/ic_action_bluetooth"
                    style="@style/BluetoothRoundButton"
                    android:layout_below="@+id/progress_run_win"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>


            <!--Left Content-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/rl_right">

                <TextView
                    android:id="@+id/tv_privia_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="8dp"
                    android:text="@string/title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:fontFamily="sans-serif-black-small-caps"/>


                <TextView
                    android:id="@+id/tv_privia_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_privia_question"
                    android:paddingBottom="@dimen/margin_padding_size_medium"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/id"/>

                <RelativeLayout
                    android:layout_below="@+id/tv_privia_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/tv_privia_options_hint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:id="@+id/tv_privia_options"
                        android:layout_toLeftOf="@+id/tv_privia_options_hint"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"/>

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>


        <!-- Acciones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_padding_size_small">

            <Button
                android:id="@+id/btn_activate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:text="@string/activate"
                style="@style/ActivateRoundButton"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/btn_run"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:src="@drawable/ic_action_play"
                style="@style/RunRoundButton"/>


            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:src="@drawable/ic_action_edit"
                style="@style/EditRoundButton"/>


            <ImageButton
                android:id="@+id/btn_deactivate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="@dimen/margin_padding_size_small"
                android:src="@drawable/ic_action_discard"
                style="@style/TrashRoundButton"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>